# bulk_filigrane

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
src/bulk_filigrane/: main.py
